Corrected a CSS bug on firefox

--- a/Public/less-dev/selected.less
+++ b/Public/less-dev/selected.less
@@ -45,16 +45,6 @@
 				&.classDroppable {
 					height: 100%;
 					.shadow(2px,2px,4px);					
-
-					div {
-						height: 100%;
-						padding-top: @tdPadding;
-						padding-bottom: @tdPadding;
-						
-						background-color: white;
-						vertical-align: middle;
-					}
-				
 				}
 			}
 		}
